[gd_scene load_steps=4 format=3 uid="uid://dsl1er40msvhu"]

[ext_resource type="Texture2D" uid="uid://bxuj00e2f7vg1" path="res://UX/HealthBar.png" id="1_3514r"]
[ext_resource type="Script" path="res://UX/health_ui.gd" id="1_lg7o5"]
[ext_resource type="Texture2D" uid="uid://c6ts2bnutr254" path="res://UX/PissMeter.png" id="3_x7om1"]

[node name="HealthUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lg7o5")
metadata/_edit_lock_ = true

[node name="Player1Health" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(250, 64)
texture = ExtResource("1_3514r")
centered = false
metadata/_edit_lock_ = true

[node name="Player2Health" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1670, 64)
texture = ExtResource("1_3514r")
centered = false
offset = Vector2(-400, 0)
metadata/_edit_lock_ = true

[node name="Player1Meter" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 2
position = Vector2(250, 1000)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_x7om1")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 0, 80)
metadata/_edit_lock_ = true

[node name="Player2Meter" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1670, 1000)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_x7om1")
centered = false
offset = Vector2(-800, 0)
region_enabled = true
region_rect = Rect2(0, 0, 0, 80)
metadata/_edit_lock_ = true
